Fixed memory leak in StackHandler

Task-number: QTCREATORBUG-2339